; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_hisax_isac.c_isacsx_xpr_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_hisax_isac.c_isacsx_xpr_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isac = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@PH_DATA = common dso_local global i32 0, align 4
@CONFIRM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.isac*)* @isacsx_xpr_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @isacsx_xpr_interrupt(%struct.isac* %0) #0 {
  %2 = alloca %struct.isac*, align 8
  store %struct.isac* %0, %struct.isac** %2, align 8
  %3 = load %struct.isac*, %struct.isac** %2, align 8
  %4 = getelementptr inbounds %struct.isac, %struct.isac* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = icmp ne %struct.TYPE_2__* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %32

8:                                                ; preds = %1
  %9 = load %struct.isac*, %struct.isac** %2, align 8
  %10 = getelementptr inbounds %struct.isac, %struct.isac* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp sgt i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %8
  %16 = load %struct.isac*, %struct.isac** %2, align 8
  %17 = call i32 @isac_fill_fifo(%struct.isac* %16)
  br label %32

18:                                               ; preds = %8
  %19 = load %struct.isac*, %struct.isac** %2, align 8
  %20 = getelementptr inbounds %struct.isac, %struct.isac* %19, i32 0, i32 1
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = call i32 @dev_kfree_skb_irq(%struct.TYPE_2__* %21)
  %23 = load %struct.isac*, %struct.isac** %2, align 8
  %24 = getelementptr inbounds %struct.isac, %struct.isac* %23, i32 0, i32 1
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %24, align 8
  %25 = load %struct.isac*, %struct.isac** %2, align 8
  %26 = getelementptr inbounds %struct.isac, %struct.isac* %25, i32 0, i32 0
  store i64 0, i64* %26, align 8
  %27 = load %struct.isac*, %struct.isac** %2, align 8
  %28 = load i32, i32* @PH_DATA, align 4
  %29 = load i32, i32* @CONFIRM, align 4
  %30 = or i32 %28, %29
  %31 = call i32 @D_L1L2(%struct.isac* %27, i32 %30, i32* null)
  br label %32

32:                                               ; preds = %18, %15, %7
  ret void
}

declare dso_local i32 @isac_fill_fifo(%struct.isac*) #1

declare dso_local i32 @dev_kfree_skb_irq(%struct.TYPE_2__*) #1

declare dso_local i32 @D_L1L2(%struct.isac*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
